--- a/style.css
+++ b/style.css
@@ -1,53 +1,14 @@
-/* Basic Style */
+/* Basic Style start */
+
+
+/*Body */
 body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
 
-
-/*Header start*/
-
-.header {
-  width: 500px;
-  margin: 0 auto;
-  display: block;
-  text-align: right;
-}
-
-.header img {
-  width: 100%;
-}
-
-.header .header__link {
-  font-family: fantasy, cursive;
-}
-
-@media (max-width: 768px) {
-  .header {
-    text-align: center;
-  }
-}
-/*Header end*/
-
-/*Main start*/
-
-.wrapper {
-  display: block;
-  width: 500px;
-  margin: 0 auto 0;
-}
-
-.task {
-  width: 56%;
-  display: inline-block;
-  flex-grow: 1
-}
-
-.task-row-wrapper {
-  display: flex;
-}
-
+/*Lists*/
 ul {
   margin: 0;
   padding: 0;
@@ -57,73 +18,10 @@ li, h3 {
   list-style: none;
 }
 
-input, button {
-  outline: none;
-}
-
-button {
-  background: none;
-  border: 0;
-  color: #888;
-  font-size: 15px;
-  width: 60px;
-  font-family: Lato, sans-serif;
-  cursor: pointer;
-}
-
-button:hover {
-  color: #3a3A3a;
-}
-
-/* Heading */
-h3,
-label[for='new-task'] {
-  color: #333;
-  font-weight: 700;
-  font-size: 15px;
-  border-bottom: 2px solid #333;
-  padding: 30px 0 10px;
-  margin: 0;
-  text-transform: uppercase;
-}
-
-input[type="text"] {
-  margin: 0;
-  font-size: 18px;
-  line-height: 18px;
-  height: 21px;
-  padding: 0 9px;
-  border: 1px solid #dDd;
-  background: #FFF;
-  border-radius: 6px;
-  font-family: Lato, sans-serif;
-  color: #888;
-}
-
-input[type="text"]:focus {
-  color: #333;
-}
-
-/* New Task */
-label[for='new-task'] {
-  display: block;
-  margin: 0 0 20px;
-}
-
-input#new-task {
-  width: 318px;
-}
-
-p > button:hover {
-  color: #0FC57C;
-}
-
-/* Task list */
 li {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -148,36 +46,157 @@ li > input[type="text"] {
   width: 226px
 }
 
-li > button.delete:hover {
+/* Delete Task start */
+li > button.task__delete:hover {
   color: #CF2323;
 }
 
-button.delete img {
+button.task__delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+button.task__delete img:hover {
   transform: rotateZ(0);
 }
+/* Delete Task end */
 
-/* Completed */
-ul#completed-tasks label {
-  text-decoration: line-through;
-  color: #888;
-}
-
-/* Edit Task */
+/* Edit Task start */
 ul li input[type=text] {
   display: none
 }
 
-ul li.editMode input[type=text] {
+ul li.edit_mode input[type=text] {
   display: inline-block;
   width: 224px
 }
 
-ul li.editMode label {
+ul li.edit_mode label {
   display: none;
 }
+
+/* Edit Task end */
+
+/*Buttons*/
+
+button {
+  background: none;
+  border: 0;
+  color: #888;
+  font-size: 15px;
+  width: 60px;
+  font-family: Lato, sans-serif;
+  cursor: pointer;
+}
+
+button:hover {
+  color: #3a3A3a;
+}
+
+/*Inputs*/
+h3,
+label[for="new__task"] {
+  color: #333;
+  font-weight: 700;
+  font-size: 15px;
+  border-bottom: 2px solid #333;
+  padding: 30px 0 10px;
+  margin: 0;
+  text-transform: uppercase;
+}
+
+input, button {
+  outline: none;
+}
+
+input[type="text"] {
+  margin: 0;
+  font-size: 18px;
+  line-height: 18px;
+  height: 21px;
+  padding: 0 9px;
+  border: 1px solid #dDd;
+  background: #FFF;
+  border-radius: 6px;
+  font-family: Lato, sans-serif;
+  color: #888;
+}
+
+input[type="text"]:focus {
+  color: #333;
+}
+
+/* Basic Style end */
+
+/*Header start*/
+
+.header {
+  width: 500px;
+  margin: 0 auto;
+  display: block;
+  text-align: right;
+}
+
+.header img {
+  width: 100%;
+}
+
+.header .header__link {
+  font-family: fantasy, cursive;
+}
+
+@media (max-width: 768px) {
+  .header {
+    text-align: center;
+  }
+}
+
+/*Header end*/
+
+/*Main start*/
+
+.wrapper {
+  display: block;
+  width: 500px;
+  margin: 0 auto 0;
+}
+
+/*section new item start*/
+
+.new__task {
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1
+}
+
+.new__task_wrapper {
+  display: flex;
+}
+
+label[for="new__task"] {
+  display: block;
+  margin: 0 0 20px;
+}
+
+input#new__task {
+  width: 318px;
+}
+
+.new__task_btn:hover {
+  color: #0FC57C;
+}
+
+/*section new item start*/
+
+/* section completed__tasks start */
+ul#completed__tasks label {
+  text-decoration: line-through;
+  color: #888;
+}
+
+/* section completed__tasks end */
+
+/*Main end*/
+
+
