fix: fix columns

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -43,11 +43,11 @@ li > label {
 }
 
 li > input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 
 ul li input[type="text"] {
-  display: none
+  display: none;
 }
 
 /* Delete Task start */
@@ -72,7 +72,7 @@ li > button.task__delete:hover {
 
 ul .edit_mode input[type="text"] {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 ul .edit_mode label {
@@ -170,7 +170,7 @@ input[type="text"]:focus {
 .new__task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .new__task_wrapper {
