--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -14,7 +14,8 @@ ul {
   padding: 0;
 }
 
-li, h3 {
+li,
+h3 {
   list-style: none;
 }
 
@@ -109,7 +110,8 @@ label[for="new__task"] {
   text-transform: uppercase;
 }
 
-input, button {
+input, 
+button {
   outline: none;
 }
 
