--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3,67 +3,67 @@
 
 /*Body */
 body {
-  background-color: #f8f8f8;
-  color: #333;
-  font-family: Lato, sans-serif;
+    background-color: #f8f8f8;
+    color: #333;
+    font-family: Lato, sans-serif;
 }
 
 /*Lists*/
 ul {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 li,
 h3 {
-  list-style: none;
+    list-style: none;
 }
 
 li {
-  overflow: hidden;
-  padding: 20px 0;
-  border-bottom: 1px solid #eee;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    overflow: hidden;
+    padding: 20px 0;
+    border-bottom: 1px solid #eee;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 li > * {
-  vertical-align: middle;
+    vertical-align: middle;
 }
 
 li > input[type="checkbox"] {
-  margin: 0 10px;
+    margin: 0 10px;
 }
 
 li > label {
-  padding-left: 10px;
-  box-sizing: border-box;
-  font-size: 18px;
-  width: 226px;
+    padding-left: 10px;
+    box-sizing: border-box;
+    font-size: 18px;
+    width: 226px;
 }
 
 li > input[type="text"] {
-  width: 226px;
+    width: 226px;
 }
 
 ul li input[type="text"] {
-  display: none;
+    display: none;
 }
 
 /* Delete Task start */
-li > button.task__delete:hover {
-  color: #CF2323;
+.task__delete:hover {
+    color: #CF2323;
 }
 
 .task__delete img {
-  height: 2em;
-  transform: rotateZ(45deg);
-  transition: transform 200ms ease-in;
+    height: 2em;
+    transform: rotateZ(45deg);
+    transition: transform 200ms ease-in;
 }
 
 .task__delete img:hover {
-  transform: rotateZ(0);
+    transform: rotateZ(0);
 }
 
 /* Delete Task end */
@@ -71,13 +71,13 @@ li > button.task__delete:hover {
 /* Edit Task start */
 
 
-ul .edit_mode input[type="text"] {
-  display: inline-block;
-  width: 224px;
+.edit_mode .task__text {
+    display: inline-block;
+    width: 224px;
 }
 
-ul .edit_mode label {
-  display: none;
+.edit_mode .task__label {
+    display: none;
 }
 
 /* Edit Task end */
@@ -85,51 +85,51 @@ ul .edit_mode label {
 /*Buttons*/
 
 button {
-  background: none;
-  border: 0;
-  color: #888;
-  font-size: 15px;
-  width: 60px;
-  font-family: Lato, sans-serif;
-  cursor: pointer;
+    background: none;
+    border: 0;
+    color: #888;
+    font-size: 15px;
+    width: 60px;
+    font-family: Lato, sans-serif;
+    cursor: pointer;
 }
 
 button:hover {
-  color: #3a3A3a;
+    color: #3a3A3a;
 }
 
 /*Inputs*/
 h3,
-label[for="new__task"] {
-  color: #333;
-  font-weight: 700;
-  font-size: 15px;
-  border-bottom: 2px solid #333;
-  padding: 30px 0 10px;
-  margin: 0;
-  text-transform: uppercase;
+.task-form__new-label {
+    color: #333;
+    font-weight: 700;
+    font-size: 15px;
+    border-bottom: 2px solid #333;
+    padding: 30px 0 10px;
+    margin: 0;
+    text-transform: uppercase;
 }
 
-input, 
+input,
 button {
-  outline: none;
+    outline: none;
 }
 
 input[type="text"] {
-  margin: 0;
-  font-size: 18px;
-  line-height: 18px;
-  height: 21px;
-  padding: 0 9px;
-  border: 1px solid #dDd;
-  background: #FFF;
-  border-radius: 6px;
-  font-family: Lato, sans-serif;
-  color: #888;
+    margin: 0;
+    font-size: 18px;
+    line-height: 18px;
+    height: 21px;
+    padding: 0 9px;
+    border: 1px solid #dDd;
+    background: #FFF;
+    border-radius: 6px;
+    font-family: Lato, sans-serif;
+    color: #888;
 }
 
 input[type="text"]:focus {
-  color: #333;
+    color: #333;
 }
 
 /* Basic Style end */
@@ -137,24 +137,24 @@ input[type="text"]:focus {
 /*Header start*/
 
 .header {
-  width: 500px;
-  margin: 0 auto;
-  display: block;
-  text-align: right;
+    width: 500px;
+    margin: 0 auto;
+    display: block;
+    text-align: right;
 }
 
 .header img {
-  width: 100%;
+    width: 100%;
 }
 
 .header .header__link {
-  font-family: fantasy, cursive;
+    font-family: fantasy, cursive;
 }
 
 @media (max-width: 768px) {
-  .header {
-    text-align: center;
-  }
+    .header {
+        text-align: center;
+    }
 }
 
 /*Header end*/
@@ -162,42 +162,42 @@ input[type="text"]:focus {
 /*Main start*/
 
 .wrapper {
-  display: block;
-  width: 500px;
-  margin: 0 auto 0;
+    display: block;
+    width: 500px;
+    margin: 0 auto 0;
 }
 
 /*section new item start*/
 
-.new__task {
-  width: 56%;
-  display: inline-block;
-  flex-grow: 1;
+.task-form__new-input {
+    width: 56%;
+    display: inline-block;
+    flex-grow: 1;
 }
 
-.new__task_wrapper {
-  display: flex;
+.task-form__new-wrapper {
+    display: flex;
 }
 
-label[for="new__task"] {
-  display: block;
-  margin: 0 0 20px;
+.task-form__new-label {
+    display: block;
+    margin: 0 0 20px;
 }
 
-.new__task {
-  width: 318px;
+.task-form__new-input {
+    width: 318px;
 }
 
-.new__task_btn:hover {
-  color: #0FC57C;
+.task-form__new-button:hover {
+    color: #0FC57C;
 }
 
 /*section new item start*/
 
 /* section completed__tasks start */
-#completed__tasks label {
-  text-decoration: line-through;
-  color: #888;
+#completed-tasks .task__label {
+    text-decoration: line-through;
+    color: #888;
 }
 
 /* section completed__tasks end */
